...
                ),
              ),
              SizedBox(
                height: 38.0,
              ),
              TextFormField(
                key: ValueKey('loginTxtKey'),
                onChanged: (value) {
                  email = value;
                  //Do something with the user input.
                },
                validator: (String? value) {
                  // return (value == null || value.isEmpty)
                  //     ? "Email id is required."
                  //     : null;
                  if (value == null || value.isEmpty) {
                    return "Email id is required.";
                  } else if (value != 'user') {
                    return "Incorrect Email";
                  } else {
                    return null;
                  }
                },
                decoration: InputDecoration(
                  hintText: 'Enter your email',
...
              ),
              SizedBox(
                height: 8.0,
              ),
              TextFormField(
                obscureText: true,
                key: ValueKey('passwordTxtKey'),
                onChanged: (value) {
                  password = value;
                  //Do something with the user input.
                },
                validator: (String? value) {
                  // return (value == null || value.isEmpty)
                  //     ? "Password is required."
                  //     : null;
                  if (value == null || value.isEmpty) {
                    return "Password is required.";
                  } else if (value != 'password') {
                    return "Incorrect password";
                  } else {
                    return null;
                  }
                },
                decoration: InputDecoration(
                  hintText: 'Enter your password.',
...
                padding: EdgeInsets.symmetric(vertical: 16.0),
                child: Material(
                  color: Colors.teal,
                  borderRadius: BorderRadius.all(Radius.circular(30.0)),
                  elevation: 5.0,
                  child: MaterialButton(
                    key: ValueKey('LoginSubmitBtnKey'),
                    onPressed: () {
                      submit();
                      //Implement login functionality.
                    },
                    minWidth: 200.0,
                    height: 42.0,
...
